--- a/src/pages/HomestayDetail/_HomestayDetail.scss
+++ b/src/pages/HomestayDetail/_HomestayDetail.scss
@@ -7,3 +7,8 @@
     color: #fff;
   }
 }
+.homestay-detail__header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
