--- a/src/common/PopupChat/_PopupChat.scss
+++ b/src/common/PopupChat/_PopupChat.scss
@@ -24,7 +24,7 @@
     box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px,
       rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
     min-width: 320px;
-    width: 700px;
+    width: 510px;
     height: 400px;
     min-height: 400px;
     max-height: 405px;
@@ -41,10 +41,14 @@
       height: 48px;
       padding: 8px;
       background-color: #fff;
-      border-bottom: 1px solid #e5e5e5;
-      border-radius: 5px;
+      border-bottom: 1px solid #ffd1b4;
+      border-top-left-radius: 5px;
+      border-top-right-radius: 5px;
+      display: flex;
+      align-items: center;
     }
     &__title {
+      color: #ee4d2d;
       margin-left: 10px;
     }
     &__main {
@@ -54,7 +58,9 @@
     }
     &__receiver {
       flex-grow: 1;
+      border-right: 1px solid #e1e1e1;
       height: calc(400px - 48px);
+      max-width: calc(510px - 230px);
       &__name {
         font-size: 1.4rem;
         font-weight: bold;
@@ -62,12 +68,12 @@
         height: 49px;
         display: flex;
         align-items: center;
-        border-bottom: 1px solid #e5e5e5;
+        border-bottom: 1px solid #e1e1e1;
         padding: 0 1rem;
       }
     }
     &__listHomestay {
-      width: 240px;
+      width: 230px;
       padding: 0 1rem;
 
       .ul-list-item-homestay {
@@ -86,6 +92,17 @@
           cursor: pointer;
           padding: 5px 0;
           border-top: 1px solid #e5e5e5;
+          display: flex;
+          align-items: center;
+          &:hover {
+            background-color: #f5f5f5;
+          }
+          p {
+            font-size: 1.4rem;
+            font-weight: bold;
+            margin: 0;
+            margin-left: 5px;
+          }
         }
       }
     }
@@ -104,29 +121,59 @@
       &__item {
         display: flex;
         align-items: center;
+
+        margin-top: 5px;
+      }
+      &__line {
+        border-radius: 5px;
         padding-top: 4px;
         padding-bottom: 4px;
         padding-right: 4px;
+        display: flex;
+        align-items: center;
+        width: fit-content;
       }
       &__message {
         margin-left: 10px;
         font-size: 14px;
         color: #000;
+        word-break: break-all;
       }
     }
     &__input-wrap {
       border-top: 1px solid #e5e5e5;
       display: flex;
       align-items: center;
-      padding: 12px;
+      padding: 6px;
       height: 52px;
+      input {
+        padding: 6px 0;
+        margin: 0 6px;
+        border: none;
+        outline: none;
+        width: 100%;
+        height: 100%;
+        padding: 0;
+        font-size: 14px;
+        color: #000;
+        background-color: #fff;
+        box-shadow: none;
+      }
     }
     &__btn-send {
       margin-left: 5px;
-      padding-left: 5px;
-      padding-right: 5px;
-      border: 1px solid #e5e5e5;
+      padding: 6px;
+      border-radius: 9999px;
+      border: 1px solid rgb(31, 173, 250);
       cursor: pointer;
+      background-color: #fff;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      color: rgb(31, 173, 250);
+      &:hover {
+        background-color: #e8f4ff;
+      }
     }
   }
 }
