--- a/src/common/PopupChat/_PopupChat.scss
+++ b/src/common/PopupChat/_PopupChat.scss
@@ -58,9 +58,9 @@
     }
     &__receiver {
       flex-grow: 1;
-      border-right: 1px solid #e1e1e1;
+      border-left: 1px solid #e1e1e1;
       height: calc(400px - 48px);
-      max-width: calc(510px - 230px);
+      max-width: calc(510px - 200px);
       &__name {
         font-size: 1.4rem;
         font-weight: bold;
@@ -73,7 +73,7 @@
       }
     }
     &__listHomestay {
-      width: 230px;
+      width: 200px;
       padding: 0 1rem;
 
       .ul-list-item-homestay {
@@ -102,6 +102,7 @@
             font-weight: bold;
             margin: 0;
             margin-left: 5px;
+            word-break: break-all;
           }
         }
       }
@@ -132,6 +133,7 @@
         display: flex;
         align-items: center;
         width: fit-content;
+        max-width: calc(100% - 40px);
       }
       &__message {
         margin-left: 10px;
