--- a/src/common/FormFilters/_FormFilters.scss
+++ b/src/common/FormFilters/_FormFilters.scss
@@ -5,6 +5,32 @@
   &__col {
     padding: 1.5rem;
   }
+  &__search {
+    margin-bottom: 2rem;
+    height: 3.2rem;
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    color: rgba(0, 0, 0, 0.85);
+    font-size: 1.4rem;
+    font-variant: tabular-nums;
+    line-height: 1.8rem;
+    list-style: none;
+    font-feature-settings: 'tnum', 'tnum';
+    padding: 4px 11px 4px;
+    position: relative;
+    display: inline-flex;
+    align-items: center;
+    background: #fff;
+    border: 1px solid #d9d9d9;
+    border-radius: 2px;
+    transition: border 0.3s, box-shadow 0.3s;
+    &:focus {
+      border-color: #40a9ff;
+      border-right-width: 1px;
+      outline: 0;
+    }
+  }
   &__title {
     margin-bottom: 2rem;
     color: #555555;
