--- a/src/components/Reviews/FormReview/_FormReview.scss
+++ b/src/components/Reviews/FormReview/_FormReview.scss
@@ -1,4 +1,10 @@
 .form-review {
+  .ant-modal-content {
+    width: 100%;
+  }
+  .ant-space .ant-space-item:first-child{
+    width: 100%;
+  }
   &__title {
     font-size: 1.6rem;
     font-weight: bold;
@@ -6,13 +12,13 @@
     color: #3578e5;
   }
 }
-.ui-form-control{
+.ui-form-control {
+  margin-bottom: 1.5rem;
+  display: flex;
+  flex-direction: column;
+  &__label {
+    font-size: 1.6rem;
+    font-weight: bold;
     margin-bottom: 1.5rem;
-    display:flex; 
-    flex-direction: column;
-    &__label{
-        font-size: 1.6rem;
-        font-weight: bold;
-        margin-bottom: 1.5rem;
-    }
+  }
 }
