--- a/src/pages/HomestayDetail/_HomestayDetail.scss
+++ b/src/pages/HomestayDetail/_HomestayDetail.scss
@@ -12,3 +12,12 @@
   justify-content: space-between;
   align-items: center;
 }
+.homestay-detail__address {
+  font-size: 1.5rem;
+  font-weight: bold;
+  margin-bottom: 2rem;
+}
+.homestay-detail__address span {
+  font-size: 1.5rem;
+  
+}
