--- a/src/common/Footer/FooterInfo/_FooterInfo.scss
+++ b/src/common/Footer/FooterInfo/_FooterInfo.scss
@@ -1,6 +1,6 @@
 .footer_info {
   position: relative;
-  padding: 0 4rem 3rem;
+  padding: 2rem 4rem 3rem;
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
