fix homestay, review item

--- a/src/common/Header/_Header.scss
+++ b/src/common/Header/_Header.scss
@@ -25,10 +25,10 @@
     // transition: .4s ease-in-out;
     background: #fff;
     a {
-      color: #23232c;
+      // color: #23232c;
     }
     .navbar_icon__item {
-      color: #23232c;
+      // color: #23232c;
     }
   }
   a {
