--- a/src/pages/ReviewDetail/_ReviewDetailPage.scss
+++ b/src/pages/ReviewDetail/_ReviewDetailPage.scss
@@ -12,6 +12,7 @@
 }
 
 .review-box {
+  box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
   display: flex;
   justify-content: space-between;
   width: 100%;
@@ -22,7 +23,7 @@
   &-main {
     flex-grow: 1;
     padding-right: 2rem;
-    max-width: 75%;
+    max-width: 100%;
     display: flex;
     flex-direction: column;
   }
@@ -30,6 +31,8 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
+    padding-bottom: 1rem;
+    border-bottom: 1px solid #d9d9d9;
   }
   &__info {
     display: flex;
