--- a/src/common/HomestayItem/_HomestayItem.scss
+++ b/src/common/HomestayItem/_HomestayItem.scss
@@ -44,7 +44,7 @@
     align-items: flex-start;
   }
   &__title {
-    margin-bottom: 2rem;
+    margin-bottom: 1rem;
   }
   &__name {
     color: #555555;
@@ -66,6 +66,7 @@
     color: #9a9a9a;
     font-size: 1.5rem;
     font-weight: 400;
+    margin-bottom: 0;
     cursor: pointer;
     &--icon {
       color: #9a9a9a;
