--- a/src/pages/ReviewDetail/_ReviewDetailPage.scss
+++ b/src/pages/ReviewDetail/_ReviewDetailPage.scss
@@ -20,6 +20,9 @@
   padding: 12px;
   border-radius: 10px;
   background-color: #fff;
+  @media screen and (max-width: 767.98px) {
+    flex-wrap: wrap;
+  }
   &-main {
     flex-grow: 1;
     padding-right: 2rem;
