--- a/src/pages/Reviews/_Reviews.scss
+++ b/src/pages/Reviews/_Reviews.scss
@@ -1,10 +1,12 @@
 .reviews-page {
   padding: 8rem 4rem;
 }
-.form-review{
-    display: flex;
-    align-items: flex-start;
-    justify-content: space-between;
+.form-review {
+  display: flex;
+  align-items: flex-start;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  margin-bottom: 1rem;
 }
 .btn-review {
   display: flex;
