--- a/src/common/PopupChat/_PopupChat.scss
+++ b/src/common/PopupChat/_PopupChat.scss
@@ -62,7 +62,7 @@
       align-items: center;
     }
     &__title {
-      color: #ee4d2d;
+      color: #ff4d4f;
       margin-left: 10px;
     }
     &__main {
