--- a/src/common/FormFilters/_FormFilters.scss
+++ b/src/common/FormFilters/_FormFilters.scss
@@ -25,6 +25,7 @@
     border: 1px solid #d9d9d9;
     border-radius: 2px;
     transition: border 0.3s, box-shadow 0.3s;
+    width: 100%;
     &:focus {
       border-color: #40a9ff;
       border-right-width: 1px;
