fix bug, add  query category

--- a/src/common/TableProduct/_TableProduct.scss
+++ b/src/common/TableProduct/_TableProduct.scss
@@ -13,7 +13,7 @@
     text-decoration: underline;
   }
   .room_seperator {
-    font-size: 1.6rem;
+    // font-size: 1.6rem;
   }
   .old_price {
     font-size: 1.3rem;
